# uktam

./: .gitattributes  .gitignore  PRIVACY.md  README.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/example/indicoffline/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/translation/: tokenizer_config.json
app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp
app/src/main/java/com/example/indicoffline/: AboutScreen.kt  AppNavigation.kt  AsrScreen.kt  AudioCapturer.kt  DownloadScreen.kt  IndicAsrEngine.kt  LicensesScreen.kt  LlamaWrapper.kt  MainActivity.kt  ModelDownloadWorker.kt  ModelDownloader.kt  SettingsScreen.kt  TranslationViewModel.kt
app/src/main/java/com/example/indicoffline/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/drawable/: ic_github.xml  ic_indikvox_logo_inset.xml  ic_linkedin.xml  ic_uktam_logo_inset.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml  ic_launcher_round.xml
app/src/main/res/raw/: aboutlibraries.json  keep.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/indicoffline/: ExampleUnitTest.kt
asr_assets/: build.gradle.kts
asr_assets/src/main/assets/hi/: model.int8.onnx
asr_assets/src/main/assets/kn/: model.int8.onnx
asr_assets/src/main/assets/ta/: model.int8.onnx
asr_assets/src/main/assets/te/: model.int8.onnx
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
